--- a/worktile_config.json
+++ b/worktile_config.json
@@ -237,6 +237,14 @@
             "kanbanid": "61848e35bd37052b2a0396e4",
             "vid": "5ffba8890531a37a22e7fad2",
             "groupid": "6184eb6f12db6415000aa33a"
-        }
+        },
+        {
+            "pid": "61de9c0a9fd789024ca495e6",
+            "pname": "[敏捷]2022-功能点管理",
+            "kanbanid": "61de9c0b9fd789024ca495e9",
+            "vid": "5ffba8890531a37a22e7fad2",
+            "groupid": "6184eb6f12db6415000aa33a",
+            "type": "mj"
+        }        
     ]
 }
