--- a/worktile_config.json
+++ b/worktile_config.json
@@ -266,6 +266,12 @@
             "pname": "[敏捷]2022-数研院门禁管理系统",
             "kanbanid": "61e670c775cc65554e9c1b38",
             "type": "mj"
+        },
+        {
+            "pid": "61d6617bcc91f250b382b96d",
+            "pname": "[敏捷]2022-协同办公系统",
+            "kanbanid": "61d6617bcc91f250b382b970",
+            "type": "mj"
         }          
     ]
 }
