--- a/worktile_config.json
+++ b/worktile_config.json
@@ -12,7 +12,8 @@
         },
         {
             "id": "26935db6cc6a48ed829ddb980e7d92fc",
-            "name": "孟凡鼎"
+            "name": "孟凡鼎",
+            "uid": "A229F6B8F79D46BB9227713F8A55C738"
         },
         {
             "id": "d318a8b8e0ca40a2889353af464bf39a",
