--- a/worktile_config.json
+++ b/worktile_config.json
@@ -21,7 +21,8 @@
         },
         {
             "id": "9a111d87115f4c4897c823ce9659a57e",
-            "name": "杨晔"
+            "name": "杨晔",
+            "uid": "4CFE503B5BAF4CD2B79C37269F170663"
         },
         {
             "id": "a55cb3ab57f843dbb238d9fe6716d9da",
