--- a/worktile_config.json
+++ b/worktile_config.json
@@ -46,7 +46,8 @@
         },
         {
             "id": "d02882a104154128a0535a10dd9c4945",
-            "name": "王德明"
+            "name": "王德明",
+            "uid": "17ED8DE30D894D0C965A8C1033D5B8B0"
         },
         {
             "id": "06dc824ba28c4dec8a7c199fb50b27f0",
