--- a/worktile_config.json
+++ b/worktile_config.json
@@ -80,7 +80,8 @@
         },
         {
             "id": "988da011ddef41edac6ae0183c3d243c",
-            "name": "李玉伟"
+            "name": "李玉伟",
+            "uid": "EC13557D0B134FF19FAEED110AE0AA84"
         }
         ,
         {
