--- a/worktile_config.json
+++ b/worktile_config.json
@@ -43,7 +43,8 @@
         },
         {
             "id": "5df53726b0d54d01a7442d2a605e8c7a",
-            "name": "孟鑫"
+            "name": "孟鑫",
+            "uid": "1AD971CB29F341699787AEB54819C6AC"
         },
         {
             "id": "d02882a104154128a0535a10dd9c4945",
