--- a/worktile_config.json
+++ b/worktile_config.json
@@ -61,7 +61,8 @@
         },
         {
             "id": "833807b62f9448b5a6bf4a9897fb0700",
-            "name": "王涛"
+            "name": "王涛",
+            "uid": "DB418D5252E64C80B9AB3B05CD0E8F37"
         },
         {
             "id": "5bb357ca2d164badbbb9160a5c3b22e1",
