--- a/worktile_config.json
+++ b/worktile_config.json
@@ -79,7 +79,8 @@
         {
             "id": "7149800a7f8e4f5793429debeaf99958",
             "name": "张英豪",
-            "wb":"wb"
+            "wb":"wb",
+            "uid": "940D4D18ECF34178BA6303B90F5912A1"
         },
         {
             "id": "988da011ddef41edac6ae0183c3d243c",
