--- a/worktile_config.json
+++ b/worktile_config.json
@@ -57,7 +57,8 @@
         },
         {
             "id": "0f09459c7fbe48e7a2036c53f4d48d58",
-            "name": "王鹏"
+            "name": "王鹏",
+            "uid": "5FA281B3D13B4A468D000CF42496ED25"
         },
         {
             "id": "833807b62f9448b5a6bf4a9897fb0700",
