--- a/cf.yml
+++ b/cf.yml
@@ -24,7 +24,6 @@ proxies:
     ip: 172.16.0.2
     private-key: "AAUnYTS10NLVDhPtStukiZd1lGpl1/gOBdvhbfSQJEE="
     public-key: "bmXOC+F1FxEMF9dyiK2H5/1SUtzH0JuVo51h2wPfgyo="
-    mtu: 1280
 
   - name: c2
     type: wireguard
@@ -59,8 +58,8 @@ proxy-groups:
     - { name: 故障转移, type: fallback, proxies: ['cloudflare','c2','c3','c4','HK'], url: 'http://www.gstatic.com/generate_204', interval: 7200 }
 
 rules:
-    - 'DOMAIN-SUFFIX,ip6.me,DIRECT'
-    - 'DOMAIN-SUFFIX,ip4.me,出国'
+    - 'DOMAIN,ip6.me,DIRECT'
+    - 'DOMAIN,ip4.me,出国'
     - 'DOMAIN-SUFFIX,ytimg.com,出国'
     - 'DOMAIN-SUFFIX,services.googleapis.cn,出国'
     - 'DOMAIN-SUFFIX,xn--ngstr-lra8j.com,出国'
