--- a/office.yml
+++ b/office.yml
@@ -143,10 +143,10 @@ proxies:
     udp: true
 
   - {
-      "name": "HK",
+      "name": "504",
       "type": "vmess",
-      "server": "18.162.45.179",
-      "port": 61086,
+      "server": "124.70.40.219",
+      "port": 60087,
       "cipher": "auto",
       "uuid": "fab5f095-188e-420a-b711-95d8f11750b8",
       "alterId": 0,
@@ -357,7 +357,6 @@ proxy-groups:
       - "cf-cdn-4"
       - "cf-cdn-5"
       - "cloudflare"
-      - "HK"
       - "cfcdn"
   - name: 自动选择
     type: url-test
@@ -370,7 +369,6 @@ proxy-groups:
       - "cf-cdn-4"
       - "cf-cdn-5"
       - "cloudflare"
-      - "HK"
     url: http://www.gstatic.com/generate_204
     interval: 86400
   - name: 故障转移
@@ -384,7 +382,6 @@ proxy-groups:
       - "cf-cdn-4"
       - "cf-cdn-5"
       - "cloudflare"
-      - "HK"
     url: http://www.gstatic.com/generate_204
     interval: 7200
   - name: ChatGPT
@@ -404,7 +401,12 @@ proxy-groups:
     type: select
     proxies:
       - 11
+  - name: 利民村
+    type: select
+    proxies:
+      - 504
 rules:
+  - IP-CIDR,10.0.0.0/16,利民村,no-resolve
   - IP-CIDR,10.234.0.0/16,高速云,no-resolve
   - DOMAIN-SUFFIX,chat.openai.com,ChatGPT
   - "DOMAIN,ip6.me,DIRECT"
