--- a/cf.yml
+++ b/cf.yml
@@ -43,6 +43,18 @@ proxies:
     udp: true
 
   - {
+      "name": "cfcdn",
+      "type": "vless",
+      "server": "146.56.44.19",
+      "port": 2052,
+      "uuid": "04ce1b0c-d154-4b24-85d7-e788c8f83bb7",
+      "tls": false,
+      "servername": "hellomerry.ssc0nl-9iial87gr4mbw.workers.dev",
+      "network": "ws",
+      "ws-opts": { "path": "/?ed=2048", "headers": { "host": "hellomerry.ssc0nl-9iial87gr4mbw.workers.dev" } },
+      "client-fingerprint": "randomized",
+    }
+  - {
       "name": "cf-cdn-1",
       "type": "vless",
       "server": "140.238.28.164",
@@ -67,41 +79,29 @@ proxies:
       "client-fingerprint": "randomized",
     }
 
-  - {
-      "name": "HK",
-      "type": "vmess",
-      "server": "18.162.45.179",
-      "port": 61086,
-      "cipher": "auto",
-      "uuid": "fab5f095-188e-420a-b711-95d8f11750b8",
-      "alterId": 0,
-      "tls": false,
-      "skip-cert-verify": true,
-      "servername": "",
-      "network": "tcp",
-    }
-
 proxy-groups:
-  - { name: 出国, type: select, proxies: ["自动选择", "故障转移", "cloudflare", "cf-cdn-0", "cf-cdn-1", "HK"] }
+  - { name: 出国, type: select, proxies: ["自动选择", "故障转移", "cloudflare", "cf-cdn-0", "cf-cdn-1", "cfcdn"] }
   - {
       name: 自动选择,
       type: url-test,
-      proxies: ["cloudflare", "cf-cdn-0", "cf-cdn-1", "HK"],
+      proxies: ["cloudflare", "cf-cdn-0", "cf-cdn-1", "cfcdn"],
       url: "http://www.gstatic.com/generate_204",
       interval: 86400,
     }
   - {
       name: 故障转移,
       type: fallback,
-      proxies: ["cloudflare", "cf-cdn-0", "cf-cdn-1", "HK"],
+      proxies: ["cloudflare", "cf-cdn-0", "cf-cdn-1", "cfcdn"],
       url: "http://www.gstatic.com/generate_204",
       interval: 7200,
     }
 
 rules:
+  - "DOMAIN-KEYWORD,douyin,DIRECT"
+  - "DOMAIN-KEYWORD,toutiao,DIRECT"
+  - "DOMAIN-KEYWORD,docker,出国"
   - "DOMAIN,ip6.me,DIRECT"
   - "DOMAIN,ip4.me,出国"
-  - "DOMAIN-SUFFIX,ytimg.com,出国"
   - "DOMAIN-SUFFIX,services.googleapis.cn,出国"
   - "DOMAIN-SUFFIX,xn--ngstr-lra8j.com,出国"
   - "DOMAIN,safebrowsing.urlsec.qq.com,DIRECT"
