--- a/sub_clash/office_clash.yaml
+++ b/sub_clash/office_clash.yaml
@@ -3,7 +3,7 @@ allow-lan: true
 bind-address: "*"
 mode: rule
 log-level: info
-external-controller: "127.0.0.1:9090"
+external-controller: ":9090"
 
 dns:
   enable: true
